--- a/chat/estilo.css
+++ b/chat/estilo.css
@@ -44,6 +44,11 @@
   .sidebar li {
     margin-bottom: 15px;
   }
+
+  .sidebar li a {
+    text-decoration: none;
+    color: white;
+  }
   
   .main-content {
     flex-grow: 1;
