--- a/home/css/styles.css
+++ b/home/css/styles.css
@@ -1,3 +1,16 @@
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
+.roboto-mono-body {
+  font-family: "Roboto Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Ajusta el peso según tu necesidad (100, 200, 300, etc.) */
+  font-style: normal; /* Cambia a 'italic' si necesitas texto en cursiva */
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -9,13 +22,13 @@
    }
    
    .logo {
-    margin-right: 20px;
+    margin-right: 5px;
    }
    
    .logo-img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+    width: 75px;
+    height: auto;
+    border-radius: 15px;
    }
    
    .menu {
@@ -26,6 +39,7 @@
    }
    
    .menu-item {
+    padding: 0 0.5rem 0 0.5rem;
     text-decoration: none;
     color: #333;
     margin-right: 20px;
@@ -88,7 +102,7 @@
    /* Estilos para el efecto Neumorphism */
    .navbar {
     background: linear-gradient(145deg, #cacaca, #f0f0f0);
-    border-radius: 20px;
+    border-radius: 0px;
     box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
    }
    
@@ -139,4 +153,21 @@
   
   .usuario-dropdown:hover {
     display: block;
+  }
+
+  /* Main */
+
+  .container_text {
+    width: 80%;
+    height: 200px;
+    margin: 3rem auto 0 auto;
+    text-align: center;
+    border-radius: 50px;
+    background: #e0e0e0;
+    box-shadow:  20px 20px 60px #bebebe,
+             -20px -20px 60px #ffffff;
+  }
+
+  .container_text h1 {
+    margin-top: 1rem;
   }
