--- a/home/css/styles.css
+++ b/home/css/styles.css
@@ -1,7 +1,25 @@
+:root {
+  --color-body:#F0F0F0;
+  --container:#c4f3fc;
+  --elemento-principal: #A6CFE2;
+  --color-container-text:#e0e0e0; 
+  --subtitulos:#666666;
+  --texto:#333333;
+  --botones:#D8BFD8;
+  /*Fondo principal: Un blanco (#FFFFFF) o gris muy claro (#F0F0F0).
+Elementos principales: Azul suave (#A6CFE2) o verde menta (#A8D5BA) para encabezados, botones principales.
+Textos: Gris oscuro (#333333) para el cuerpo del texto y gris medio (#666666) para subtítulos.
+Botones secundarios y detalles: Rosa suave (#FFB6C1) o lavanda (#D8BFD8)
+  */
+}
+
 * {
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
+}
+body {
+  background-color: var(--color-body);
 }
 
 .roboto-mono-body {
@@ -23,6 +41,9 @@
    
    .logo {
     margin-right: 5px;
+    background: #236209;
+    box-shadow: inset 5px 5px 6px #1e5508,
+            inset -5px -5px 6px #286f0a;
    }
    
    .logo-img {
@@ -157,17 +178,31 @@
 
   /* Main */
 
-  .container_text {
+  .containerText {
     width: 80%;
     height: 200px;
     margin: 3rem auto 0 auto;
     text-align: center;
     border-radius: 50px;
-    background: #e0e0e0;
-    box-shadow:  20px 20px 60px #bebebe,
-             -20px -20px 60px #ffffff;
+    background: var(--container);
+    box-shadow: inset 0 0 0 color;
+    box-shadow:  6px 6px 0px #bebebe,
+                -6px -6px 0px #ffffff;
   }
 
-  .container_text h1 {
+  .containerText h1 {
     margin-top: 1rem;
+  }
+
+  .containerTextLeft {
+    width: 80%;
+    height: 200px;
+    margin: 4rem auto 0 0px;
+    text-align: center;
+    border-radius: 50px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    background: var(--container);
+    box-shadow:  6px 6px 0px #bebebe,
+                -6px -6px 0px #ffffff;
   }
