--- a/home/css/home.css
+++ b/home/css/home.css
@@ -42,6 +42,10 @@ body {
   font-weight: 400; /* Ajusta el peso según tu necesidad (100, 200, 300, etc.) */
   font-style: normal; /* Cambia a 'italic' si necesitas texto en cursiva */
 }
+header{
+  width: 100%;
+  box-shadow: 1px 1px 1px var(--dark-color);
+}
 
 .navbar {
     display: flex;
@@ -50,7 +54,6 @@ body {
     padding: 20px;
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    }
    
    /* .logo {
@@ -60,24 +63,31 @@ body {
             inset -5px -5px 6px #286f0a;
    } */
    
-   .logo-img {
-    width: 75px;
+   .logoImg {
     height: auto;
+    width: 75px;
+    
+    font-size:1.5rem;
+    font-weight: 600;
+    letter-spacing: 2px;
+    border: none;
     border-radius: 15px;
+    box-shadow: 5px 5px 5px var(--dark-color);
    }
    
    .menu {
     list-style: none;
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    padding:0;
     display: flex;
+    
    }
    
    .menu-item {
     padding: 0 0.5rem 0 0.5rem;
     text-decoration: none;
     color: #333;
-    margin-right: 20px;
+    margin: 20px;
     transition: color 0.2s ease;
    }
    
